--- a/modelo.html
+++ b/modelo.html
@@ -16,7 +16,7 @@
 
             <a href="/">
             </a>
-            <img src="/img/logo.png" alt="logo">
+            <img src="/img/logo.png" alt="logo" width="100">
             <h1>Meu blog Estático</h1>
             <form action="https://www.google.com/search" method="get">
             <input type="search" name="q" id="" placeholder="Pesquisar...">
@@ -41,7 +41,7 @@
         </a>
 
         <a href="login.html" id="interacaoUsuario" title="Logue-se no site">
-            <img src="img/anonimous.png" alt="Faça login">
+            <img src="img/anonimous.png" alt="Faça login" width="20">
             <span>Login</span>
         </a>
 
