--- a/modelo.html
+++ b/modelo.html
@@ -13,14 +13,17 @@
     <div id="wrap">
 
         <header>
-
-            <a href="/">
-            </a>
-            <img src="/img/logo.png" alt="logo" width="100">
+            <div>
+                <a href="/">
+                    <img src="/img/logo.png" alt="logo">
+                </a>
+           
             <h1>Meu blog Estático</h1>
+            </div>
             <form action="https://www.google.com/search" method="get">
-            <input type="search" name="q" id="" placeholder="Pesquisar...">
-            <button type="submit"><i class="fa-solid fa-magnifying-glass fa-fw"></i></button>
+                <input type="search" name="q" placeholder="Pesquisar...">
+                <button type="submit"><i class="fa-solid fa-magnifying-glass fa-fw"></i>
+                </button>
             </form>
     </header>
 
@@ -41,7 +44,7 @@
         </a>
 
         <a href="login.html" id="interacaoUsuario" title="Logue-se no site">
-            <img src="img/anonimous.png" alt="Faça login" width="20">
+            <img src="img/anonimous.png" alt="Faça login">
             <span>Login</span>
         </a>
 
